--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sngbecomm-php",
+    "name": "deolive/sngbecomm-php",
     "description": "A simple SNGB internet acquiring php library.",
     "keywords": [
         "sngb",
